--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "xiejiahe",
   "homepage": "https://github.com/xjh22222228/nav",
   "scripts": {
-    "start": "npm run build-start && ng serve --port=7001",
+    "start": "npm run build-start && ng serve --port=7001 --live-reload=false",
     "build-start": "ts-node ./scripts/start.mjs",
     "setup": "npm run build-start && ts-node ./scripts/build.mjs",
     "build-gh-pages": "npm run setup && ng build --base-href ./ --index src/index.html",
@@ -15,23 +15,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.0",
-    "@angular/common": "^19.0.0",
-    "@angular/compiler": "^19.0.0",
-    "@angular/core": "^19.0.0",
-    "@angular/forms": "^19.0.0",
-    "@angular/platform-browser": "^19.0.0",
-    "@angular/platform-browser-dynamic": "^19.0.0",
-    "@angular/router": "^19.0.0",
-    "rxjs": "~7.8.1",
-    "tslib": "^2.8.1",
-    "zone.js": "~0.15.0",
+    "@angular/animations": "^19.1.7",
+    "@angular/common": "^19.1.7",
+    "@angular/compiler": "^19.1.7",
+    "@angular/core": "^19.1.7",
+    "@angular/forms": "^19.1.7",
+    "@angular/platform-browser": "^19.1.7",
+    "@angular/platform-browser-dynamic": "^19.1.7",
+    "@angular/router": "^19.1.7",
+    "@tailwindcss/postcss": "^4.0.9",
     "@types/file-saver": "^2.0.7",
-    "@types/qs": "^6.9.17",
-    "axios": "^1.7.7",
+    "@types/qs": "^6.9.18",
+    "axios": "^1.8.1",
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.13",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "file-saver": "^2.0.5",
     "js-base64": "^3.7.7",
     "js-yaml": "^4.1.0",
@@ -39,32 +37,35 @@
     "lz-string": "^1.5.0",
     "mitt": "^3.0.1",
     "ng-zorro-antd": "^19.1.0",
-    "nodemailer": "^6.9.16",
+    "nodemailer": "^6.10.0",
     "nprogress": "^0.2.0",
-    "postcss": "^8.4.49",
-    "qs": "^6.13.1",
+    "postcss": "^8.5.3",
+    "qs": "^6.14.0",
     "rough-notation": "^0.5.1",
-    "tailwindcss": "^3.4.15"
+    "rxjs": "~7.8.2",
+    "tailwindcss": "^4.0.9",
+    "tslib": "^2.8.1",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.0",
-    "@angular/cli": "^19.0.0",
-    "@angular/compiler-cli": "^19.0.0",
-    "@types/jasmine": "~5.1.4",
-    "jasmine-core": "~5.4.0",
+    "@angular-devkit/build-angular": "^19.1.8",
+    "@angular/cli": "^19.1.8",
+    "@angular/compiler-cli": "^19.1.7",
+    "@types/jasmine": "~5.1.7",
+    "@types/nprogress": "^0.2.3",
+    "body-parser": "^1.20.3",
+    "compression": "^1.8.0",
+    "connect-history-api-fallback": "^2.0.0",
+    "cors": "^2.8.5",
+    "info-web": "^0.0.33",
+    "jasmine-core": "~5.6.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.6.3",
-    "@types/nprogress": "^0.2.3",
-    "body-parser": "^1.20.3",
-    "compression": "^1.7.5",
-    "connect-history-api-fallback": "^2.0.0",
-    "cors": "^2.8.5",
-    "info-web": "^0.0.33",
     "pm2": "^5.4.3",
-    "ts-node": "~10.9.2"
+    "ts-node": "~10.9.2",
+    "typescript": "~5.7.3"
   }
 }
