--- a/src/environments/Dockerfile
+++ b/src/environments/Dockerfile
@@ -1,10 +1,10 @@
-FROM node:20.17.0 AS alpine
+FROM node:22-alpine AS alpine
 
 WORKDIR /app
 
 COPY package.json yarn.lock /app/
 
-RUN yarn && npm install -g pm2
+RUN yarn && npm install -g pm2 tsx
 
 COPY . /app/
 
@@ -12,4 +12,4 @@ RUN npm run build
 
 EXPOSE 7777
 
-CMD ["pm2-runtime", "src/environments/main.mjs"]
+CMD ["pm2-runtime", "start", "--interpreter", "tsx", "src/environments/main.ts"]
