--- a/src/environments/Dockerfile
+++ b/src/environments/Dockerfile
@@ -2,9 +2,9 @@ FROM node:22-alpine
 
 WORKDIR /app
 
-COPY package.json yarn.lock /app/
+COPY package.json pnpm-lock.yaml .npmrc /app/
 
-RUN yarn && npm install -g pm2 tsx
+RUN npm install -g pm2 tsx pnpm && pnpm install
 
 COPY . /app/
 
