--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
   "type": "module",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.0",
-    "@angular/common": "^19.2.0",
-    "@angular/compiler": "^19.2.0",
-    "@angular/core": "^19.2.0",
-    "@angular/forms": "^19.2.0",
-    "@angular/platform-browser": "^19.2.0",
-    "@angular/platform-browser-dynamic": "^19.2.0",
-    "@angular/router": "^19.2.0",
-    "axios": "^1.8.1",
+    "@angular/animations": "^19.2.3",
+    "@angular/common": "^19.2.3",
+    "@angular/compiler": "^19.2.3",
+    "@angular/core": "^19.2.3",
+    "@angular/forms": "^19.2.3",
+    "@angular/platform-browser": "^19.2.3",
+    "@angular/platform-browser-dynamic": "^19.2.3",
+    "@angular/router": "^19.2.3",
+    "axios": "^1.8.4",
+    "chrome-finder": "^1.0.7",
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.13",
     "express": "^4.21.2",
@@ -36,28 +37,25 @@
     "mitt": "^3.0.1",
     "ng-zorro-antd": "^19.1.0",
     "nprogress": "^0.2.0",
+    "puppeteer": "^24.4.0",
     "qs": "^6.14.0",
     "rough-notation": "^0.5.1",
     "rxjs": "~7.8.2",
+    "sharp": "^0.33.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "tsx": "^4.19.3",
-    "tailwindcss": "^4.0.9",
-    "nodemailer": "^6.10.0",
-    "postcss": "^8.5.3",
-    "tslib": "^2.8.1",
-    "@tailwindcss/postcss": "^4.0.9",
+    "@angular-devkit/build-angular": "^19.2.4",
+    "@angular/cli": "^19.2.4",
+    "@angular/compiler-cli": "^19.2.3",
+    "@tailwindcss/postcss": "^4.0.15",
     "@types/compression": "^1.7.5",
     "@types/file-saver": "^2.0.7",
+    "@types/jasmine": "~5.1.7",
     "@types/js-yaml": "^4.0.9",
     "@types/nodemailer": "^6.4.17",
-    "@types/qs": "^6.9.18",
-    "@angular-devkit/build-angular": "^19.2.0",
-    "@angular/cli": "^19.2.0",
-    "@angular/compiler-cli": "^19.2.0",
-    "@types/jasmine": "~5.1.7",
     "@types/nprogress": "^0.2.3",
+    "@types/qs": "^6.9.18",
     "body-parser": "^1.20.3",
     "compression": "^1.8.0",
     "connect-history-api-fallback": "^2.0.0",
@@ -69,7 +67,12 @@
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "pm2": "^5.4.3",
+    "nodemailer": "^6.10.0",
+    "pm2": "^6.0.5",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.15",
+    "tslib": "^2.8.1",
+    "tsx": "^4.19.3",
     "typescript": "~5.8.2"
   }
 }
