feat: Support GitLab platform

--- a/nav.config.yaml
+++ b/nav.config.yaml
@@ -7,8 +7,9 @@
 # 联系授权：https://official.nav3.cn/pricing
 # 免责声明：使用即表示已阅读 https://official.nav3.cn/disclaimers
 
-# 仓库地址，填写 Fork 后的仓库地址，支持 Gitee / GitHub
+# 仓库地址，填写 Fork 后的仓库地址，支持 Gitee / GitHub / GitLab
 # 作者 Gitee 仓库地址 https://gitee.com/xiejiahe/nav
+# 作者 GitLab 仓库地址 https://gitlab.com/xjh22222228/nav?projectId=68880543, projectId 是项目 ID，可在仓库页面中找到
 gitRepoUrl: https://github.com/xjh22222228/nav
 
 # Fork 部署分支
@@ -17,6 +18,7 @@ branch: main
 # 默认Fork仓库
 # 仓库必须自己提前创建，如果打算长期使用本软件，建议每个人都创建一个新的仓库作为图片存储
 # e.g 'https://github.com/xjh22222228/image?branch=main'
+# gitlab e.g 'https://gitlab.com/xjh22222228/image?branch=main&projectId=1001'
 imageRepoUrl: ''
 
 # 只有GitHub pages用户需要设置为true， 其他建议设置为 false
