--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "author": "xiejiahe",
   "homepage": "https://github.com/xjh22222228/nav",
   "scripts": {
-    "start": "npm run init && ng serve --port=7001 --live-reload=false",
-    "start:reload": "npm run init && ng serve --port=7001",
+    "start": "npm run init && ng serve --host 0.0.0.0 --port=7001 --live-reload=false",
+    "start:reload": "npm run init && ng serve --host 0.0.0.0 --port=7001",
     "init": "tsx ./scripts/start.ts",
     "setup": "npm run init && tsx ./scripts/build.ts",
     "build-gh-pages": "npm run setup && ng build --base-href ./ --index src/index.html",
