--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "watch": "ng build --watch --configuration development",
     "update": "git pull && (git remote add upstream https://gitee.com/xiejiahe/nav.git || true) && git fetch upstream main && git merge upstream/main --allow-unrelated-histories --no-edit && git push",
     "pull": "git pull",
-    "server": "tsx src/environments/main.ts",
-    "server:prod": "pm2 start --interpreter tsx src/environments/main.ts --name navServer"
+    "server": "npm run init && tsx src/environments/main.ts",
+    "server:prod": "npm run init && pm2 start --interpreter tsx src/environments/main.ts --name navServer"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,scss,md}": "npm run format"
@@ -45,7 +45,7 @@
     "mitt": "^3.0.1",
     "ng-zorro-antd": "^19.2.2",
     "nprogress": "^0.2.0",
-    "puppeteer": "^24.8.1",
+    "puppeteer": "^24.8.2",
     "qs": "^6.14.0",
     "rough-notation": "^0.5.1",
     "rxjs": "~7.8.2",
@@ -56,7 +56,7 @@
     "@angular-devkit/build-angular": "^19.2.11",
     "@angular/cli": "^19.2.11",
     "@angular/compiler-cli": "^19.2.10",
-    "@tailwindcss/postcss": "^4.1.5",
+    "@tailwindcss/postcss": "^4.1.6",
     "@types/compression": "^1.7.5",
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.8",
@@ -70,12 +70,12 @@
     "cors": "^2.8.5",
     "info-web": "^0.0.46",
     "jasmine-core": "~5.7.1",
-    "lint-staged": "^15.5.2",
-    "nodemailer": "^7.0.2",
+    "lint-staged": "^16.0.0",
+    "nodemailer": "^7.0.3",
     "pm2": "^6.0.5",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4.1.5",
+    "tailwindcss": "^4.1.6",
     "tslib": "^2.8.1",
     "tsx": "^4.19.4",
     "typescript": "~5.8.3"
