feat: add PWA support with manifest and icons
- Added `icon-192x192.png` and `icon-512x512.png` for application icons.
- Created `manifest.webmanifest` for PWA configuration with app name, theme color, and icons.
- Updated `app.config.ts` to include service worker for caching and offline support.
- Implemented data backup functionality in `main.ts` with JSON stringification.
- Modified English and Chinese locale files for improved translations.
- Updated HTML files to include manifest link and theme color meta tag.
- Enhanced table layouts in various components for better responsiveness.
- Configured Vercel to serve the manifest with the correct content type.

--- a/angular.json
+++ b/angular.json
@@ -57,7 +57,8 @@
                   "maximumError": "10kb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "serviceWorker": "ngsw-config.json"
             },
             "development": {
               "optimization": false,
