feat(upload-file): remove image type restriction for file uploads
build(docker): add volume for data and upload directories, update CMD to initialize before starting

feat(settings): add title input field to settings form

--- a/src/environments/Dockerfile
+++ b/src/environments/Dockerfile
@@ -10,6 +10,8 @@ COPY . /app/
 
 RUN npm run build
 
+VOLUME ["/app/data", "/app/_upload"]
+
 EXPOSE 7777
 
-CMD ["pm2-runtime", "start", "--interpreter", "tsx", "src/environments/main.ts"]
+CMD ["sh", "-c", "npm run init && pm2-runtime start --interpreter tsx src/environments/main.ts"]
